# sclik

./: .gitignore  LICENSE  MANIFEST.in  README.md  publish.py  pyproject.toml  setup.cfg
app/: ipfs_setup_handler.py  main.py
